[package]
name = "cases"
version = "0.1.0"
edition = '2018'


[dependencies]
criterion = { version = "0.5" }
rand = { version = "0.8.5" }
ccc = { path = "./crates/ccc" }

[lib]
crate-type = ["lib"]

[build-dependencies]
cc = "1.0"


[[bench]]
name = "benchmark"
harness = false

[profile.opt]
inherits = "dev"
opt-level = 3
debug-assertions = false
overflow-checks = false